@@ -1,3 +1,9 @@
+2007-02-05  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/30189
+	* dwarf2out.c (modified_type_die): Follow DECL_ORIGINAL_TYPE
+	even if cv-qualification is the same.
+
 2007-02-05  Geoffrey Keating  <geoffk@apple.com>
 
 	* config/rs6000/darwin-tramp.asm (__trampoline_setup): Call
